replaced grid implementation of post modal with flex, modals work a little bit better on mobile + fixed send a message display on mobile

--- a/application/frontend/src/components/Hero/HeroContainer.module.css
+++ b/application/frontend/src/components/Hero/HeroContainer.module.css
@@ -67,7 +67,7 @@
 }
 
 .signup-button:hover{
-    opacity: .85;
+    background-color: var(--color-primary-300);
 }
 
 @media (max-width: 1170px){
