--- a/application/frontend/src/components/Modals/Modal.module.css
+++ b/application/frontend/src/components/Modals/Modal.module.css
@@ -8,8 +8,8 @@
   box-shadow: var(--elevation-10);
   border-radius: 7.5px;
   overflow: hidden;
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 100%;
+  max-width: 90%;
 }
 
 .overlay {
@@ -36,11 +36,4 @@
 
 .exit-button:hover {
   opacity: 0.75;
-}
-
-@media (max-width: 450px){
-  .modal {
-    height: 100vh;
-    width: 100vw;
-  }
 }
