--- a/application/frontend/src/components/Modals/PostModal.module.css
+++ b/application/frontend/src/components/Modals/PostModal.module.css
@@ -3,6 +3,7 @@
     width: 1200px;
     max-width: 100%;
     height: 800px;
+    max-height: 100%;
     flex-flow: row wrap;
 }
 
@@ -24,19 +25,14 @@
     padding-top: 1rem;
     flex-basis: 50%;
     box-shadow: var(--elevation-1);
-    display: grid;
-    grid-template-areas: 'post-detail'
-                         'post-body'
-                         'post-comments'
-                         'post-leave-comment';
-    grid-template-rows: repeat(3, auto) 40px;
-    height: 100%;
-    align-content: flex-start;
+    display: flex;
+    flex-direction: column;
 }
 
 /*Post Detail*/
 
 .post-detail{
+    flex: 0 0 45px;
     grid-area: post-detail;
     margin-left: 1rem;
     display: grid;
@@ -72,32 +68,33 @@
 .post-body{
     margin:0.5rem 1rem;
     font-family: var(--ff-secondary);
-    grid-area: post-body;
 }
 
 
 /* Comments  */
 
 .post-comments{
-    grid-area: post-comments;
     padding-left:0;
     list-style: none;
     overflow: auto;
+    flex: 2 1 1px;
+    margin-bottom: 0;
 }
 
 .post-leave-comment{
-    grid-area: post-leave-comment;
     display: flex;
-    position: absolute;
-    bottom: .5rem;
-    width: 50%;
-    height: 40px;
-    
+    width: 100%;
+    flex: 0 1 40px;
+    padding: 1rem 0;
+    background-color: var(--color-text-inverted);
 }
 
 .post-leave-comment input{
-    margin-left: 1rem;
+    margin-left: 2.5%;
     flex-basis: 80%;
+    border-radius: 7.5px;
+    border: 1px solid var(--inactive-txt-clr);
+    padding: 0.5rem 0.5rem;
 }
 
 .post-leave-comment button{
@@ -136,18 +133,13 @@
 @media (max-width: 768px){
     .post-image{
         flex-basis: 100%;
-        height: 40vh;
+        height: 50%;
     }
 
     .post-content{
         flex-basis: 100%;
-        height: 60vh;
+        height: 50%;
     }
-
-    .post-leave-comment{
-        width: 100%;
-    }
-
 }
 
 
